--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Bookmark - Gerenciador de Favoritos Simples</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/png" href="images/favicon-32x32.png">
 </head>
 <body>
     <header class="hero">
