--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </header>
 
     <nav id="mobileNav" class="mobile-navigation">
-        <ul>
+        <ul class="nav-links">
             <li><a href="#recursos">Recursos</a></li>
             <li><a href="#precos">Preços</a></li>
             <li><a href="#contato">Contato</a></li>
@@ -49,7 +49,7 @@
             <li><a href="#"><img src="images/icon-facebook.svg" alt="Facebook"></a></li>
             <li><a href="#"><img src="images/icon-twitter.svg" alt="Twitter"></a></li>
         </ul>
-    </nav>
+    </nav>    
 
     <main>
         <section id="recursos" class="features">
